--- a/Style Sheet.css
+++ b/Style Sheet.css
@@ -188,9 +188,9 @@ body {
 }
 
 .buttons:hover {
-  background-color: #a16800;
-  color: white;
-  transition: all 0.3s;
+  	background-color: #a16800;
+  	color: white;
+  	transition: all 0.3s;
 
 }
 
@@ -206,3 +206,93 @@ footer img {
     max-width: 9vw;
 }
 
+section {
+  	min-height: 100vh;
+  	width: 100%;
+  	display: flex;
+  	align-items: center;
+  	justify-content: center;
+  	padding: 100px 0;
+  	background-color: rgb(26, 26, 27);
+}
+.container {
+  	width: 100%;
+  	height: 90%;
+  	max-width: 1200px;
+  	margin: 0 auto;
+  	padding: 20px;
+}
+.brand {
+  	text-align: center;
+  	font-size: 2rem;
+  	color: #ffa200;
+  	margin-bottom: 30px;
+}
+form {
+  	width: 50%;
+  	max-width: 400px;
+  	margin: 20px auto;
+  	background-color: white;
+}
+input {
+  	width: 90%;
+  	padding: 10px;
+  	border-radius: 4px;
+  	border: none;
+  	outline: none;
+  	font-size: 2rem;
+  	background-color: white;
+  	display: inline-block;
+}
+
+.search-result {
+  	margin-top: 50px;
+  	width: 100%;
+  	display: grid;
+  	grid-gap: 25px;
+  	grid-template: auto / repeat(auto-fit, minmax(300px, 1fr));
+}
+.item {
+  	width: 100%;
+  	border-radius: 8px;
+  	background-color: rgb(37, 37, 37);
+  	padding: 15px;
+  	overflow: hidden;
+}
+.item img {
+  	width: 100%;
+  	height: 300px;
+  	border-radius: 4px;
+}
+.flex-container {
+  	display: flex;
+  	align-items: center;
+  	justify-content: space-between;
+}
+.search-result .title {
+  	color: whitesmoke;
+  	margin: 20px 10px 0 0;
+  	font-size: 1.8rem;
+  	font-weight: 400;
+}
+.view-btn {
+  	text-decoration: none;
+  	text-align: center;
+  	width: 130px;
+  	padding: 10px 0;
+  	background-color: #404041;
+  	color: whitesmoke;
+  	font-size: 1.4rem;
+  	font-weight: 600;
+  	margin-top: 20px;
+  	border-radius: 4px;
+  	align-self: flex-start;
+}
+.item-data {
+  	color: whitesmoke;
+  	display: block;
+  	margin-top: 10px;
+  	font-size: 1.4rem;
+  	letter-spacing: 0.05rem;
+  	line-height: 2rem;
+}
